// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.analyzedtestvariant;

import "go.chromium.org/luci/analysis/proto/analyzedtestvariant/analyzed_test_variant.proto";
import "go.chromium.org/luci/analysis/proto/v1/predicate.proto";

option go_package = "go.chromium.org/luci/analysis/proto/analyzedtestvariant;atvpb";

// Represents a function AnalyzedTestVariant -> bool.
message Predicate {
  // A test variant must have a test id matching this regular expression
  // entirely, i.e. the expression is implicitly wrapped with ^ and $.
  string test_id_regexp = 1;

  // A test variant must have a variant satisfying this predicate.
  luci.analysis.v1.VariantPredicate variant = 2;

  // A test variant must have this status.
  Status status = 3;
}
