// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.v1;

import "go.chromium.org/luci/resultdb/proto/v1/common.proto";

option go_package = "go.chromium.org/luci/resultdb/proto/v1;resultpb";

// Represents a unique test variant. Comparing with TestVariant, this message
// doesn't contain the outcomes.
//
// A test variant is unique when it has a unique combination of realm, test_id,
// and variant_hash.
message UniqueTestVariant {
  // The realm that the unique test variant is in.
  string realm = 1;

  // Test ID that the unique test variant belongs to.
  string test_id = 2;

  // Hash of the variant.
  //
  // See the comments on luci.resultdb.v1.TestResult.variant_hash for details.
  string variant_hash = 3;

  // The definition of the variant.
  Variant variant = 4;
}
